# Sonarqube

./: .gitignore  HUONG_DAN_THUC_HIEN.md  Makefile  README.md  docker-compose.yml  pyproject.toml  sonar-project.properties
.github/workflows/: sonarqube.yml
docs/: ISSUE_FIXES.md
examples/: issues_before.py
src/sonarqube_code_quality/: __init__.py  calculator.py  data_processor.py
tests/: test_calculator.py  test_data_processor.py
