[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "sonarqube-code-quality"
version = "1.0.0"
description = "Python project for Continuous Code Quality with SonarQube assignment"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "DevOps Student" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "black==24.10.0",
  "pytest==8.3.4",
  "pytest-cov==6.0.0",
  "ruff==0.8.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"

[tool.coverage.run]
branch = true
source = ["src"]
relative_files = true

[tool.coverage.report]
show_missing = true
fail_under = 80
exclude_lines = [
  "if __name__ == .__main__.:",
  "pragma: no cover",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = []
